name:                ldap-client
version:             0.1.0
synopsis:            Pure Haskell LDAP Client Library
description:
  Pure Haskell LDAP client library implementing (the parts of) RFC 4511.
homepage:            https://supki.github.io/ldap-client
license:             BSD2
license-file:        LICENSE
author:              Matvey Aksenov
maintainer:          matvey.aksenov@gmail.com
copyright:           2015 Matvey Aksenov
category:            Network
build-type:          Simple
cabal-version:       >= 1.10
extra-source-files:
  README.markdown

source-repository head
  type:     git
  location: git@github.com:supki/ldap-client

library
  default-language:
    Haskell2010
  hs-source-dirs:
    src
  exposed-modules:
    Ldap.Asn1.FromAsn1
    Ldap.Asn1.ToAsn1
    Ldap.Asn1.Type
    Ldap.Client
  build-depends:
      asn1-encoding >= 0.9
    , asn1-types    >= 0.3
    , async
    , base          >= 4.7 && < 5
    , bytestring
    , connection    >= 0.2
    , containers
    , network       >= 2.6
    , semigroups    >= 0.16
    , stm
    , text

test-suite spec
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  other-modules:
    Ldap.ClientSpec
  build-depends:
      base          >= 4.7 && < 5
    , hspec
    , ldap-client
    , process
